--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -1,41 +1,36 @@
 .container{
-    background-color: rgb(86, 81, 81);
+    /* background-color: rgb(86, 81, 81); */
     /* height: 900px; */
 }
 
 
 .nav{
+    width: 100%;
+    /* height: 80px; */
+
+}
+
+
+
+.top{
+    position: fixed;
+    width: 100%;
+    background-color: gray;
+    height: 50px;
     display: flex;
-    height: 75px;
-    /* background-color: rgb(88, 88, 133); */
-    justify-content: space-between;
-}
+    /* margin-left: 130px; */
 
-.navleft{
-    /* padding: 6px; */
-}
-
-
-.navright{
-    /* background-color: rgb(83, 51, 51); */
-    /* height: 100px; */
-    /* width: 200px; */
 }
 
 
 
-.navleft > img{
-    height: 98%;
-    /* width: 98%; */
-    margin-left: 85px;
-    padding: 5px;
-    padding-top: 12px;
-}
+
 
 .navtabs{
     display: flex;
-    /* justify-content: center; */
-    margin-right: 120px;
+    justify-content: space-around;
+    /* margin-right: 120px; */
+    width: 65%;
     
     /* margin-left: 10px; */
     /* width: 100px; */
@@ -43,10 +38,10 @@
 
 li{
     /* padding: 3px; */
-    margin-right: 30px;
+    /* margin-right: 30px; */
     display: inline-block;
-    justify-content: space-between;
-    font-size: larger;
+    justify-content: space-;
+    font-size: x-large;
     font-weight: bold;
    font-family: "Sofia", sans-serif;
     color: rgb(247, 244, 239);
@@ -81,10 +76,21 @@ font-family: "Audiowide", sans-serif;}
 
  .aboutme{
     display: flex;
-    background-color: white;
+    justify-content: space-evenly;
+    background-color: gray;
  }
 
  .right > p{
     justify-content: center;
-    font-size: xx-large;
+    font-size: x-large;
+    width: 400px;
+    /* margin-left: 100px; */
+    /* border-style:groove ; */
  }
+
+.resume{
+    height: 100px;
+}
+
+
+
