--- a/Portfolio/new-resume/MY Portfolio/styl.css
+++ b/Portfolio/new-resume/MY Portfolio/styl.css
@@ -1,5 +1,6 @@
 .main{
     /* background-color: darkgray; */
+    height: 585px;
 }
 
 .topbar{
@@ -8,6 +9,7 @@
     height: 70px;
     width: 100%;
     background-color: black;
+    position: fixed;
 
     
     /* background-color: black; */
@@ -15,6 +17,13 @@
 }
 
 h1{
+    color: white;
+    font-weight: bolder;
+    text-align: center;
+    margin-top: 95px;
+}
+
+h2{
     color: rgb(245, 240, 240);
     font-weight: bolder;
     text-align: center;
@@ -52,8 +61,8 @@ p{
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     width: 600px;
     margin: 0px;
-    margin-top: 175px;
-    color: antiquewhite;
+    margin-top: 40px;
+    color: black;
 }
 .infobox{
 display: flex;
@@ -61,6 +70,12 @@ flex-direction: column;
 align-items: center;
 height: 500px;
 }
+
+.h2{
+    color: white;
+    font-size: xx-large;
+}
+
 img{
     width: 20px;
     height: 20px;
@@ -96,8 +111,19 @@ img{
 
 .aboutme{
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
+    width: 100%;
+    height: 500px;
     
+}
+
+.aboutme > img{
+    height: 291px;
+    width: 242px;
+    padding-right: 20px;
+    margin-left: 40px ;
+    border-radius: 225px;
+
 }
 
 .github{
@@ -105,4 +131,32 @@ img{
     background-color: antiquewhite;
 
 }
-  
+
+.skills{
+    /* display: flex; */
+}
+
+.skills > h2{
+    font-size: x-large;
+    color: black;
+}
+
+.myskills{
+text-align: center;
+display: flex;
+}
+
+.skill1 > p{
+font-size: large;
+/* border-right: 5px; */
+border-color: black;
+border-style: dotted;
+color: black;
+}
+
+.skill2 > p{
+font-size: large;
+border-color: black;
+border-style: dotted;
+color: black;
+}
