--- a/styl.css
+++ b/styl.css
@@ -5,6 +5,7 @@
 
 .topbar{
     display: flex;
+    /* display: block; */
     justify-content:space-evenly;
     height: 15%;
     width: 100%;
@@ -113,7 +114,7 @@ img{
     display: flex;
     justify-content: space-evenly;
     width: 100%;
-    height: 500px;
+    height: 121%px;
     
 }
 
