--- a/styl.css
+++ b/styl.css
@@ -206,5 +206,5 @@ padding: 20px;
     align-items: center;
     margin-left: 150px;
     font-size: larger;
-    color: orange;
+    color: brown;
 }
