--- a/styl.css
+++ b/styl.css
@@ -19,14 +19,14 @@
 }
 
 h1{
-    color: white;
+    color: black;
     font-weight: bolder;
     text-align: center;
     margin-top: 95px;
 }
 
 h2{
-    color: rgb(245, 240, 240);
+    color: black;
     font-weight: bolder;
     text-align: center;
 }
@@ -50,7 +50,7 @@ button{
     font-size: 16px;
     cursor: pointer;
     display: inline-block;
-    color: white;
+    color: black;
     display: flex;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     /* justify-content: space-around; */
@@ -228,6 +228,18 @@ height: 50%;
     align-items: center;
     margin-left: 150px;
     font-size: larger;
-    color: white;
+    color: blue;
+}
+
+
+#contact-form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.contact-section > h2{
+    font-size: xx-large;
+    color: black;
 }
 
