--- a/styl.css
+++ b/styl.css
@@ -36,9 +36,10 @@ h2{
     
     display: flex;
     color: aliceblue;
+    font-weight: bold;
     /* background-color: gray; */
     /* height: 30px; */
-    margin-top: 20px;   
+    /* margin-top: ;    */
     justify-content: space-around;
     
 }
@@ -225,6 +226,7 @@ height: 50%;
 
 .proj1 > a{
     padding-top: 15px;
+    padding-bottom: 8px;
     align-items: center;
     margin-left: 150px;
     font-size: larger;
@@ -232,14 +234,59 @@ height: 50%;
 }
 
 
-#contact-form{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.contact-section{
+    /* background-color: rgb(227, 203, 203); */
 }
 
 .contact-section > h2{
-    font-size: xx-large;
+    font-size: large;
     color: black;
+    margin: 10px;
+    /* display: flex; */
 }
+
+.contact-logo{
+ 
+}
+
+.logos{
+    display: flex;
+    justify-content: space-evenly;
+}
+
+#link-logo:hover{
+    animation: ease-in 0.5s;
+}
+
+@keyframes ease-in {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+  }
+
+#github-logo{
+    height: 70px;
+    width: 70px;
+}
+
+#link-logo{
+    height: 70px;
+    width: 70px;
+}
+
+#mail-logo{
+    height: 70px;
+    width: 70px;
+    
+}
+
+
 
