--- a/style.css
+++ b/style.css
@@ -23,12 +23,18 @@ h1{
     font-weight: bolder;
     text-align: center;
     margin-top: 95px;
+    font-family: "Cherry Cream Soda";
 }
 
 h2{
     color: black;
     font-weight: bolder;
     text-align: center;
+    font-family: "Cherry Cream Soda";
+}
+
+h3{
+    font-family: "Cherry Cream Soda";
 }
 
 
@@ -48,12 +54,12 @@ button{
     border: none;
     background-color: inherit;
     padding: 14px 28px;
-    font-size: 16px;
+    font-size: 19px;
     cursor: pointer;
     display: inline-block;
     color: black;
     display: flex;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: "Patrick Hand SC";
     /* justify-content: space-around; */
 
 }
@@ -62,7 +68,8 @@ p{
     text-align: center;
     /* font-weight: bold; */
     font-size: x-large;
-    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: "Patrick Hand SC";
+    /* font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
     width: 600px;
     margin: 0px;
     margin-top: 40px;
@@ -72,7 +79,10 @@ p{
 display: flex;
 flex-direction: column;
 align-items: center;
-height: 50%;
+height: 556px;
+width: 100%;
+/* box-shadow: 2px 2px 1px ; */
+
 }
 
 .h2{
@@ -151,6 +161,7 @@ img{
 flex-direction: column;
 align-items: center;
 height: 50%;
+width: 100%;
 }
 
 .skills > h2{
@@ -165,32 +176,33 @@ display: flex;
 }
 
 .skill1 > p{
-font-size: medium;
+font-size:larger;
 /* border-right: 5px; */
 border-color: orange;
 border-style: inset;
 color: black;
 width: 300px;
+height:150px ;
 padding: 20px;
 }
 
 .skill2 > p{
-font-size: medium;
+font-size: larger;
 border-color: orange;
 border-style:inset;
 color: black;
 width: 300px;
-height: 129px;
+height: 150px;
 padding: 20px;
 
 }
 
 .skill3 > p{
-    font-size: medium;
+    font-size: larger;
 border-color: orange;
 border-style: inset;
 color: black;
-height: 129px;
+height: 150px;
 width: 300px;
 padding: 20px;
 }
@@ -202,9 +214,29 @@ padding: 20px;
     color: gray;
 }
 
-.resume-pic{
-    width: 375px;
-    height: 375px;
+.grow{
+    display: flex;
+   justify-content: space-evenly;
+   width: 100%;}
+
+   .grow img{
+    transition: 1s ease;
+    }
+    
+    .grow img:hover{
+    -webkit-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    transform: scale(1.2);
+    transition: 1s ease;
+    }
+
+
+.proj-pic{
+    width: 240px;
+    height: 365px;
+    background-color:antiquewhite;
+    border-radius: 8%;
+    box-shadow: 3px 3px 2px ;
     /* padding-bottom: 30px; */
     /* border-style: dashed; */
     /* border-color: burlywood; */
@@ -214,23 +246,25 @@ padding: 20px;
     display: flex;
 flex-direction: column;
 align-items: center;
-height: 50%;
+height: 485px;
+width: 100%;
 }
 
 .proj1{
     display: flex;
     flex-direction: column;
+    /* padding-left: 10px; */
     /* border-style: inset; */
     /* border-color: transparent; */
 }
 
-.proj1 > a{
-    padding-top: 15px;
-    padding-bottom: 8px;
+ a{
+    /* padding-top: 15px; */
+    /* padding-bottom: 8px; */
     align-items: center;
-    margin-left: 150px;
+    /* margin-left: 150px; */
     font-size: larger;
-    color: blue;
+    color: black;
 }
 
 
@@ -252,6 +286,18 @@ height: 50%;
 .logos{
     display: flex;
     justify-content: space-evenly;
+    
+}
+
+.logos img{
+transition: 1s ease;
+}
+
+.logos img:hover{
+-webkit-transform: rotateZ(-10deg);
+-ms-transform: rotateZ(-10deg);
+transform: rotateZ(-10deg);
+transition: 1s ease;
 }
 
 #link-logo:hover{
