--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ p{
     font-size: x-large;
     font-family: "Patrick Hand SC";
     /* font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
-    width: 600px;
+    max-width: max-content;
     margin: 0px;
     margin-top: 40px;
     color: black;
@@ -79,7 +79,7 @@ p{
 display: flex;
 flex-direction: column;
 align-items: center;
-height: auto;
+height: 556px;
 width: 100%;
 /* box-shadow: 2px 2px 1px ; */
 
@@ -91,7 +91,7 @@ width: 100%;
 }
 
 img{
-    width: 100%;
+    width: 20px;
     height: auto;
     /* align-items:center; */
     margin-top: 18px;
@@ -232,8 +232,8 @@ padding: 20px;
 
 
 .proj-pic{
-    width: 100%;
-    height: auto;
+    width: 240px;
+    height: 365px;
     background-color:antiquewhite;
     border-radius: 8%;
     box-shadow: 3px 3px 2px ;
@@ -246,7 +246,7 @@ padding: 20px;
     display: flex;
 flex-direction: column;
 align-items: center;
-height: auto;
+height: 485px;
 width: 100%;
 }
 
@@ -319,18 +319,18 @@ transition: 1s ease;
   }
 
 #github-logo{
-    height: auto;
-    width: 100%;
+    height: 70px;
+    width: 70px;
 }
 
 #link-logo{
-    height: auto;
-    width: 100%;
+    height: 70px;
+    width: 70px;
 }
 
 #mail-logo{
-    height: auto;
-    width: 100%;
+    height: 70px;
+    width: 70px;
     
 }
 
