--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ p{
 display: flex;
 flex-direction: column;
 align-items: center;
-height: 556px;
+height: auto;
 width: 100%;
 /* box-shadow: 2px 2px 1px ; */
 
