--- a/style.css
+++ b/style.css
@@ -18,6 +18,23 @@
     
 }
 
+.shadow img {
+    transition: .5s ease;
+    }
+    
+    .shadow img:hover{
+    box-shadow:
+    1px 1px #373737,
+    2px 2px #373737,
+    3px 3px #373737,
+    4px 4px #373737,
+    5px 5px #373737,
+    6px 6px #373737;
+    -webkit-transform: translateX(-3px);
+    transform: translateX(-3px);
+    transition: .5s ease;
+    }
+
 h1{
     color: black;
     font-weight: bolder;
@@ -89,8 +106,11 @@ width: 100%;
 
 .h2{
     color: white;
-    font-size: xx-large;
+    /* font-size: xx-large; */
+    font-size: 1vw;
 }
+
+
 
 img{
     width: 20px;
@@ -124,6 +144,7 @@ img{
     padding: 0px;
    border-radius: 40px;
    margin-top: 40px;
+   
 }
 
 .github{
