--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ h1{
 }
 
 h2{
-    color: black;
+    color: grey;
     font-weight: bolder;
     text-align: center;
     font-family: "Cherry Cream Soda";
