--- a/style.css
+++ b/style.css
@@ -266,7 +266,8 @@ padding: 20px;
 
 .proj-pic{
     width: 240px;
-    height: 365px;
+    height: 340px;
+    /* padding-bottom: 10px; */
     background-color:antiquewhite;
     border-radius: 8%;
     box-shadow: 3px 3px 2px ;
@@ -291,6 +292,10 @@ width: 100%;
     /* border-color: transparent; */
 }
 
+.theList{
+    font-size: 25px;
+}
+
  a{
     /* padding-top: 15px; */
     /* padding-bottom: 8px; */
@@ -298,17 +303,36 @@ width: 100%;
     /* margin-left: 150px; */
     font-size: larger;
     color: black;
+    font-size: 25px;
 }
+
+a:link {
+    color: black;
+    text-decoration: none;
+}
+
+a:visited {
+    color: black;
+    text-decoration: none;
+}
+
+a:hover {
+    color: #80007f;
+    text-decoration: none;
+}
+
 
 
 .contact-section{
     /* background-color: rgb(227, 203, 203); */
+    padding-top: 75px;
 }
 
 .contact-section > h2{
     font-size: large;
     color: black;
     margin: 10px;
+
     /* display: flex; */
 }
 
